--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.21)
 
 # Set your project name. This will be the name of your SKSE .dll file.
 set(NAME "IntuitiveDragonRideControl" CACHE STRING "")
-set(VERSION 5.0.1 CACHE STRING "")
+set(VERSION 5.0.2 CACHE STRING "")
 
 project(
 	${NAME}
@@ -13,20 +13,25 @@ project(
 )
 
 configure_file(
-	${CMAKE_CURRENT_SOURCE_DIR}/cmake/Version.h.in
-	${CMAKE_CURRENT_BINARY_DIR}/include/Version.h
+	${CMAKE_CURRENT_SOURCE_DIR}/cmake/Plugin.h.in
+	${CMAKE_CURRENT_BINARY_DIR}/include/Plugin.h
 	@ONLY
 )
 
 configure_file(
-	${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.rc.in
-	${CMAKE_CURRENT_BINARY_DIR}/version.rc
+	${CMAKE_CURRENT_SOURCE_DIR}/cmake/plugin.rc.in
+	${CMAKE_CURRENT_BINARY_DIR}/plugin.rc
 	@ONLY
 )
 
-list(APPEND SOURCES ${CMAKE_CURRENT_BINARY_DIR}/version.rc)
+list(APPEND SOURCES ${CMAKE_CURRENT_BINARY_DIR}/plugin.rc)
 
 set(OUTPUT_FOLDER "C:/Users/tom/AppData/Local/ModOrganizer/MO_SkyrimSE/mods/_DEV_IntuitiveDragonRideControl")
+
+option(ENABLE_SKYRIM_SE "Enable support for Skyrim SE in the dynamic runtime feature." ON)
+option(ENABLE_SKYRIM_AE "Enable support for Skyrim AE in the dynamic runtime feature." ON)
+option(ENABLE_SKYRIM_VR "Enable support for Skyrim VR in the dynamic runtime feature." ON)
+set(BUILD_TESTS OFF)
 
 # Get all source files from src/ and include/
 file(GLOB_RECURSE SOURCES src/*.cpp src/*.h include/*.h)
@@ -38,14 +43,27 @@ file(GLOB_RECURSE TSSKSEFUNCTIONS_SOURCES "../TS_SKSEFunctions-main/src/*.cpp" "
 # Combine the source files
 list(APPEND SOURCES ${TSSKSEFUNCTIONS_SOURCES})
 
-# Setup your SKSE plugin as an SKSE plugin!
-find_package(CommonLibSSE CONFIG REQUIRED)
-#add_commonlibsse_plugin(${PROJECT_NAME} SOURCES plugin.cpp) # <--- specifies plugin.cpp
-add_commonlibsse_plugin(${PROJECT_NAME} SOURCES ${SOURCES})
+# --- CommonLibSSE: Use local path from environment variable ---
+set(COMMONLIBSSE_PATH $ENV{CommonLibSSEPath_NG})
+
+if(NOT COMMONLIBSSE_PATH)
+    message(FATAL_ERROR "CommonLibSSEPath_NG environment variable is not set!")
+endif()
+
+add_subdirectory("$ENV{CommonLibSSEPath_NG}" CommonLibSSE EXCLUDE_FROM_ALL)
+
+# Add your SKSE plugin target
+add_library(${PROJECT_NAME} SHARED ${SOURCES})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23) # <--- use C++23 standard
 target_precompile_headers(${PROJECT_NAME} PRIVATE include/PCH.h) # <--- PCH.h is required!
 
 target_include_directories(${PROJECT_NAME} PRIVATE include ${TSSKSEFUNCTIONS_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+find_package(spdlog CONFIG REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE spdlog::spdlog)
+
+# Link to CommonLibSSE (adjust the library name if needed)
+target_link_libraries(${PROJECT_NAME} PRIVATE CommonLibSSE::CommonLibSSE)
 
 # Include inih for .ini files
 find_path(SIMPLEINI_INCLUDE_DIRS "ConvertUTF.c")
